--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "angular-notifier": "^6.0.1",
     "material": "^0.4.3",
+    "material-angular-select": "^1.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
